<resources>
    <string name="app_name">My Modules</string>
    <string name="my_modules">My Modules</string>
    <string name="c203_web_appln_development_in_php">C203 Web Appln Development in php</string>
    <string name="c206_software_development_process">C206 Software Development Process</string>
    <string name="c218_ui_ux_design_for_apps">C218 UI/UX Design for Apps</string>
    <string name="c346_mobile_app_development">C346 Mobile App Development</string>
    <string name="back">Return</string>
</resources>